# mlx-openai-server

./: README.md  RELEASING.md  UPSTREAM.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: cli.py  cli_models.py  config.py
app/api/: admin_models.py
app/core/: batch_scheduler.py  handler_process.py  registration.py
tests/: test_admin_models_add.py  test_admin_models_delete.py  test_cli_models_scaffold.py  test_handler_timeout.py  test_unregister_with_locks.py
tests/integration/: __init__.py  conftest.py  test_chat_smoke.py  test_concurrent_smoke.py
tests/slow/: __init__.py  conftest.py  reference_corpus.txt  test_concurrent_soak.py  test_long_context_safety.py  test_mxbai_embed_correctness.py  test_nomic_embed_v15_correctness.py  test_streaming_soak.py
