[project]
name = "mlx-openai-server"
version = "0.2.0"
description = "A high-performance API server that provides OpenAI-compatible endpoints for MLX models."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Gia-Huy Vuong", email = "cubist38@gmail.com" }]
keywords = [
  "mlx",
  "fastapi",
  "openai",
  "server",
  "api",
  "local models",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "aiofiles>=25,<26",
  "click>=8.2.1,<8.4",
  "dill>=0.4,<0.5",
  "fastapi>=0.115.14,<0.130",
  "httpx>=0.28,<1",
  "json_repair>=0.52.1,<0.60",
  "loguru>=0.7.3,<0.8",
  "mlx-lm>=0.31.3,<0.32",
  "mlx>=0.31.2",
  "numpy>=2.2.0,<2.4",
  "openai>=2.21,<3",
  "openai-harmony>=0.0.8,<0.1",
  "outlines>=1.1.1,<1.2",
  "pydantic>=2,<3",
  "PyYAML>=6.0,<7",
  "python-multipart>=0.0.20,<0.0.25",
  "rich>=14,<15",
  "safetensors>=0.4,<1",
  "transformers>=4.40,<6",
  "uvicorn>=0.35.0,<0.40",
  "xxhash>=3.6,<4",
]

[dependency-groups]
dev = [
  "codespell",
  "mypy",
  "pre-commit",
  "psutil>=5.9,<8",
  "pytest",
  "pytest-asyncio",
  "ruff",
  "sentence-transformers>=3.0,<6",
  "types-aiofiles",
  "types-cffi",
  "types-PyMySQL",
  "types-pyRFC3339",
  "types-python-dateutil",
  "types-PyYAML",
  "types-regex",
  "types-requests",
  "types-setuptools",
]
enhanced-caching = ["spacy", "regex", "tiktoken", "torch", "transformers"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["py.typed"]

[project.urls]
Homepage = "https://github.com/cubist38/mlx-openai-server"

[project.scripts]
coldfire-mlx-server = "app.cli:cli"

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
prerelease = "allow"

[tool.codespell]
skip = "*.py,*.toml,*.ipynb"
quiet-level = 3

[tool.pytest.ini_options]
addopts = "--tb=short"
markers = [
  "integration: marks tests as integration tests that require external services",
  "smoke: short integration tests that boot a real server; Apple Silicon only",
  "slow: long-running soak tests; pre-release only, never run in CI",
]

# Ruff: permissive starting config (Coldfire fork). The upstream had a
# much stricter rule set that flagged hundreds of style issues on first
# run. We start small (E/F/W/I/B/UP) and tighten incrementally as code
# stabilizes. Line length is handled by the formatter (E501 ignored).
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["tests/fixtures/", "examples/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

# Mypy: permissive starting config (Coldfire fork). Starts with
# ignore_missing_imports + no_strict_optional and module-level overrides
# for MLX/HF libraries so `make lint` doesn't crash on first run. We tighten
# over time as the code stabilizes.
#
# Inherited upstream code (parsers/, handler/mlx_lm.py, models/mlx_lm.py,
# the existing core/server.py glue) ships with hundreds of pre-existing
# type errors that we are not trying to fix in this fork — only the new
# code we own (embeddings/, license tooling, etc.) is type-checked. As
# upstream code stabilizes we'll peel the ignore list back.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
exclude = ["tests/fixtures/"]
python_executable = "./.venv/bin/python"

[[tool.mypy.overrides]]
module = ["mlx.*", "mlx_lm.*", "transformers.*", "huggingface_hub.*", "safetensors.*", "tokenizers.*"]
ignore_errors = true

# Inherited upstream modules — TODO(coldfire): tighten incrementally.
# These ship with ~120 pre-existing type errors that aren't worth fixing
# in this fork before we've finished feature replacement. We re-enable
# checking module-by-module as we touch them.
[[tool.mypy.overrides]]
module = [
  "app.api.endpoints",
  "app.core.handler_process",
  "app.handler.mlx_lm",
  "app.models.mlx_lm",
  "app.parsers.*",
  "app.server",
  "app.utils.debug_logging",
  "app.utils.prompt_cache",
]
ignore_errors = true
